fixed github actions config and layout issues

--- a/client/styles/responsive.module.scss
+++ b/client/styles/responsive.module.scss
@@ -12,8 +12,8 @@ $displays: (
 );
 
 $percentages: (
-  50: percentage(50),
-  55: percentage(55),
+  50: percentage(0.5),
+  55: percentage(0.55),
 );
 @mixin respond-to($media) {
   @if $media == sm {
@@ -50,6 +50,14 @@ $percentages: (
 
       @include respond-to(#{$breakpoint}) {
         width: 100%;
+      }
+    }
+
+    .w100p_to_#{$percentage_name}--#{$breakpoint} {
+      width: 100%;
+
+      @include respond-to(#{$breakpoint}) {
+        width: #{$percentage_value};
       }
     }
   }
